2007-05-17  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Translation of mutual inductors can now be
	handled for an virtually unlimited number of coupling coefficients
	using the new MUTX component.

	* qucs_producer.cpp: Adjusted property printer to handle property
	vectors correctly.

2007-04-30  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Added translation of exponential part of a
	voltage or current source.

2007-03-26  Stefan Jahn  <stefan@lkcc.org>

	* scan_vcd.l: Allow identifiers to start with '_'.

2007-03-25  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l, parse_spice.y: Accept .TEMP syntax (Spice 2g6)
	in lexer and parser.

2007-03-24  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Handling capacitor models correctly.
	Also fixed wrong DC value of sources when neither the DC
	directive nor an immediate value was given.

2007-03-19  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed compilation failure for a NetBSD
	g++ which has _L and _N as predefined symbols (don't know if
	in headers or built-in).

2007-03-14  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Lexer modifications for the Spice 2g6 resistor
	syntax were necessary.

	* parse_spice.y: Allow Spice 2g6 syntax for resistors, also
	fixed netlist grammar for Spice 3f5 models.

	* check_spice.cpp: Handle R semiconductor model correctly as
	well as the Spice 2g6 syntax for the temperature coefficients.

2007-03-11  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed DC offset of sinuasoidal voltage and
	current sources.  Also apply default frequency if a transient
	analysis is given.

2007-03-08  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Fixed detection of a single subcircuit
	definition (skip analysis actions).

	* check_spice.cpp: Handling periodic pulse sources correctly.
	Also default Tr/Tf values for these sources to a given .TRAN step
	value.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Updated the parameter order and added